--- a/.github/ISSUE_TEMPLATE/BUG.yml
+++ b/.github/ISSUE_TEMPLATE/BUG.yml
@@ -5,6 +5,18 @@ labels: ["bug", "triage"]
 assignees:
   - octocat
 body:
+  - type: dropdown
+    id: version
+    attributes:
+      label: Version
+      description: What version of our **Mod** are you using?
+      options:
+        - 1.1.3
+        - 1.1.2
+        - 1.1.1
+        - 1.1.0
+        - 1.0.1 
+        - 1.0.0
   - type: markdown
     attributes:
       value: |
