--- a/.github/ISSUE_TEMPLATE/BUG.yml
+++ b/.github/ISSUE_TEMPLATE/BUG.yml
@@ -4,9 +4,9 @@ title: "[Bug]: "
 labels: ["Bug", "triage"]
 body:
   - type: dropdown
-    id: version
+    id: mod version
     attributes:
-      label: Version
+      label: Version 
       description: What version of our **Mod** are you using?
       options:
         - 1.1.3
@@ -15,6 +15,14 @@ body:
         - 1.1.0
         - 1.0.1 
         - 1.0.0
+          - type: dropdown
+    id: minecraft version
+    attributes:
+      label: Version
+      description: What version of **Mod** are you using?
+      options:
+        - 1.19.2
+        - 1.16.5
   - type: textarea
     id: what-happened
     attributes:
