--- a/.github/ISSUE_TEMPLATE/BUG.yml
+++ b/.github/ISSUE_TEMPLATE/BUG.yml
@@ -15,6 +15,8 @@ body:
         - 1.1.0
         - 1.0.1 
         - 1.0.0
+    validations:
+      required: true
   - type: dropdown
     id: minecraft_version
     attributes:
