--- a/.github/ISSUE_TEMPLATE/BUG.yml
+++ b/.github/ISSUE_TEMPLATE/BUG.yml
@@ -27,6 +27,8 @@ body:
         - 1.16.5
     validations:
       required: true
+  - type: input
+    id: forge-version
   - type: textarea
     id: what-happened
     attributes:
