--- a/.github/ISSUE_TEMPLATE/BUG.yml
+++ b/.github/ISSUE_TEMPLATE/BUG.yml
@@ -46,4 +46,4 @@ body:
   - type: markdown
     id: discord
     attributes:
-      value: Join our [**Discord**](https://discord.gg/TfUuCBmU2x)
+      value: Join our [**Discord**](https://discord.gg/TfUuCBmU2x) for more information and daily updates!
