--- a/.github/ISSUE_TEMPLATE/SUGGESTION.yml
+++ b/.github/ISSUE_TEMPLATE/SUGGESTION.yml
@@ -3,6 +3,11 @@ description: Write a suggestion
 title: "[Suggestion]: "
 labels: ["Suggestion"]
 body:
+  - type: input
+    id: name
+    attributes:
+      label: Your Name
+      description: How can we addres you?
   - type: textarea
     id: suggestion
     attributes:
